convert code to Java 9